# Maverick.EntityGraph.Client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml  python.yml
entitygraph/: __init__.py  admin.py  api_response.py  application.py  base_client.py  bulk_builder.py  client.py  converter.py  details.py  entity.py  entity_builder.py  namespace_map.py  query.py  transaction.py  utils.py  values.py
entitygraph/api/: __init__.py  admin_api.py  applications_api.py  entities_api.py  query_api.py  transactions_api.py
entitygraph/entity/: entity.py  entity_builder.py
entitygraph/entity/container/: container.py  icontainer.py
entitygraph/entity/values_and_relations/: relation.py  value.py  values_and_relations_base.py
entitygraph/entity/values_and_relations/details/: detail.py
entitygraph/models/: __init__.py
