[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entitygraph"
version = "0.0.4"
description = "Python client for Maverick EntityGraph API"
authors = [{name = "Bechtle A/V Software Solutions 360°", email = "mail@a365maverick.de"}]
license = { text = "Apache 2.0" }
readme = "README.md"
keywords = ["Maverick", "EntityGraph", "API"]
requires-python = ">=3.7"
dependencies = [
    "requests >= 2.31.0",
    "python-dateutil >= 2.8.2",
    "aenum >= 3.1.11"
]
